# SwarmForge

./: .env.example  .gitignore  CREDITS.md  Makefile  README.md  pyproject.toml  requirements.txt
.agents/: .skill-lock.json
.clinerules/: 00-vibe-architect.md  01-token-economy.md  02-universal-code-standards.md  03-python-fastapi-standards.md  04-contract-architect.md  05-class-coder.md  06-doc-and-test-pipeline.md
Docs/: Project_Brief.md  SF-ONBOARD-001.md
Docs/Project_Structure/: repository_tree.md
Docs/architecture/: orchestrator-hierarchy.md  phase-1-stack.md  phase-2-stack.md
Docs/contracts/: AbstractAgent.contract.md  AgentRegistry.contract.md  AgentSelector.contract.md  ClineAgent.contract.md  ResultAggregator.contract.md  StubAgents.contract.md  SwarmOrchestrator.contract.md  TaskDecomposer.contract.md
Docs/learning/: README.md  anthropic-skilljar-catalog.md
Docs/plans/: orchestrator-plan.md
Docs/research/: mas-landscape-analysis.md
Docs/reviews/: SwarmOrchestrator.review.md
Docs/snippets/: abstractagent_snippet.md  subtask_snippet.md
Docs/standards/: a2a-protocol.md
Docs/testing/: tier-decisions.md
Tools/griffe/: extract_contract_doc.py
Tools/project_tree/: setup_hook.py
configs/agents/: architect.yaml  coder.yaml  reviewer.yaml
scripts/: extract_contract_doc.py
src/: main.py
src/agents/: __init__.py  base.py  cline_agent.py  config.py  stubs.py
src/core/: models.py
src/openjarvis/: __init__.py  logger.py  main.py
src/orchestrator/: __init__.py  aggregator.py  decomposer.py  factory.py  models.py  orchestrator.py  (+2 more)
(+11 files in other folders)
