[project]
name = "swarmforge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
    "griffe>=2.0.2",
    "pytest-asyncio>=1.3.0",
]

